 mse 2.2

 NEW FEATURES

- The FLom class now derives from a parent virtual class FLo.
- A FLombf class contains slots @biols, of class FLBiols, and @fisheries, of
  class FLFisheries.
- mp() now class a goFish method for each of the FLo-derived classes: FLom and
  FLombf.
- oem modules need to take an FLo-based object as input.
- tracking is handled by methods dealing with stock being of either FLStock or
  FLStocks class.
- Added performance(FLombf) to be called by performance(FLmse).
- merge(FLQuant, data.table) method to assemble output tables.

 mse 2.1

 NEW FEATURES

- metrics method for FLmse, calls metrics(FLStock).
- control(FLmse) and control(FLmse)<- can extract or modify individual list elements.
- Accessors for FLoem@observations and @deviances now accept a subsetting name,
  as in observations(FLoem, "stk").
- Inputs to tunebisect() are now checked for coherence and dimensions.
- fwd(FLom) calls FLasher::fwd(stock(FLom), sr(FLom), ...).

 BUG FIXES

- Bug in calculation for multiple years, recycling of refpts going first along
  years, not iters.

 mse 2.0
 
 USER-VISIBLE CHANGES

- genArgs renamed args
- ctrl.mp renamed ctrl
- elements of ctrl.mp don't use ctrl.## anymore
- mp oem default became NULL

 BUG FIXES

- mlc.est fixed
- it wrongly passed to goFish fixed
- oem set of dataYears fixed
- mp without oem now creates one which is conform the other objects.

 mse 1.0

 USER-VISIBLE CHANGES

- metric.phcr, C.obs and C.est added to the tracking matrix
- length.est renamed to mlc.est

 BUG FIXES

- movingF hcr and phcr fied to work with FLPars

 mse 0.9

 USER-VISIBLE CHANGES

- Complete new code base.

 BUG FIXES

 UTILITIES

 DOCUMENTATION

 DEPRECATED & DEFUNCT

 mse 0.0.4

 USER-VISIBLE CHANGES

- Methods moved to FLCore: rnoise, rlnoise