@@ -195,7 +195,7 @@ setMethod("goFish", signature(om="FLo"),
   for(i in vy) {
     
     if(verbose) cat(i, " > ")
- 
+    
     # time (start)   
     track(tracking, "time", i) <- as.numeric(Sys.time())
 
