@@ -1,2 +1,2 @@
-indicators: indicators kobeindicators
+statistics: statistics kobestatistics
 ple4om: om oem
